--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
                                     <h2 class="portfolio-modal-title text-secondary mb-0">Bootstrap</h2>
-                                    <!-- Icon Divider-->
+                                    <!-- Icon Dividers-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
